--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "A generic backdrop component for vue",
   "author": "Honoré Nintunze <nintu.lab@gmail.com>",
   "private": true,
+  "main": "dist/modal-backdrop.js",
+  "module": "src/main.js",
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
-    "start": "npm run dev",
+    "start": "npm run build && npm run dev",
     "lint": "eslint --ext .js,.vue src",
     "build": "node build/build.js"
   },
@@ -38,6 +40,7 @@
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
     "node-notifier": "^5.1.2",
+    "node-sass": "^4.7.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
     "portfinder": "^1.0.13",
@@ -45,6 +48,7 @@
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
     "rimraf": "^2.6.0",
+    "sass-loader": "^6.0.7",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "uglifyjs-webpack-plugin": "^1.1.1",
