--- a/.babelrc
+++ b/.babelrc
@@ -2,8 +2,21 @@
   "presets": [
     ["env", {
       "modules": false,
+      "debug": true,
+      "useBuiltIns": true,
       "targets": {
-        "browsers": ["> 1%", "last 2 versions", "not ie <= 8"]
+        "browsers": [
+          "last 2 Chrome versions",
+          "not Chrome < 60",
+          "last 2 Safari versions",
+          "not Safari < 10.1",
+          "last 2 iOS versions",
+          "not iOS < 10.3",
+          "last 2 Firefox versions",
+          "not Firefox < 54",
+          "last 2 Edge versions",
+          "not Edge < 15"
+        ]
       }
     }],
     "stage-2"
